Fix positioning of psuedo element with overlapping box-shadow

--- a/packages/web-components/src/components/va-button-segmented/va-button-segmented.scss
+++ b/packages/web-components/src/components/va-button-segmented/va-button-segmented.scss
@@ -75,10 +75,10 @@
     border-radius: 4px;
     font-weight: 700;
     position: absolute;
-    top: 2px;
+    top: 4px;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 4px);
     display: flex;
     align-items: center;
     justify-content: center;
